# ogre-legacy

./: .editorconfig  .gitignore  Cargo.toml  README.md  ogre.toml
.github/_workflows/: build.yml  release.yml  test.yml
.github/workflows/: actions.yml
example/: ogre.toml
example/ext/npm/: ext.toml  gitignores.toml  package-lock.json  package.json  tsconfig.json
example/ext/npm/scripts/: scripts-parser.ts
example/ext/npm/scripts/commands/: install.nu
example/ext/npm/scripts/runners/: ts.nu
example/workspaces/project-js/: package.json
example/workspaces/project-php/: composer.json
example/workspaces/project-rust/: ogre.toml
workspaces/ogre/: Cargo.toml  Makefile
workspaces/ogre/src/: cli.rs  opts.rs
